--- a/client/app/main.html
+++ b/client/app/main.html
@@ -1,5 +1,6 @@
 <div class="container">
     <div class="jumbotron">
         <h1 class="text-center"><i class="fa fa-coffee"></i> The Coffee Mess</h1>
+        <p class="lead text-center">Always take time to stop and smell the coffee...</p>
     </div>
 </div>
