--- a/public/app/main.html
+++ b/public/app/main.html
@@ -3,4 +3,18 @@
         <h1 class="text-center"><i class="fa fa-coffee"></i> The Coffee Mess</h1>
         <p class="lead text-center">Always take time to stop and smell the coffee...</p>
     </div>
+
+    <div class="col-sm-4">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Coffee title</h3>
+            </div>
+            <div class="panel-body">
+                <img src="http://lorempixel.com/250/250/city" alt="" />
+                <p>Coffee Weight</p>
+                <p>Coffee Type</p>
+            </div>
+        </div>
+    </div>
+
 </div>
