--- a/public/app/register/register.html
+++ b/public/app/register/register.html
@@ -1,9 +1,32 @@
 <div class="container">
-    <form name="register" class="form-register">
+    <form name="registrationForm" class="form-register" novalidate>
         <h1 class="form-register-heading text-muted">Register</h1>
-        <input type="text" class="form-control" placeholder="Username" required="" autofocus="">
-        <input type="password" class="form-control" placeholder="Password" required="">
-        <input type="password" class="form-control" placeholder="Confirm Password" required="">
+
+        <input type="text" name="username"
+               class="form-control" placeholder="Username" ng-model="vm.user.username"
+               required autofocus>
+
+        <div class="help-block" ng-messages="registrationForm.username.$error">
+            <div ng-messages-include="app/register/messages.html"></div>
+        </div>
+
+        <input type="password" name="password"
+               class="form-control" placeholder="Password" ng-model="vm.user.password"
+               ng-minlength="4" required>
+
+        <div ng-messages="registrationForm.password.$error">
+            <div ng-messages-include="app/register/messages.html"></div>
+        </div>
+
+        <input type="password" name="confirmPassword"
+               class="form-control" placeholder="Confirm Password" ng-model="vm.user.confirmPassword"
+               compare-to="vm.user.password">
+
+        <div ng-messages="registrationForm.confirmPassword.$error">
+            <div ng-messages-include="app/register/messages.html"></div>
+        </div>
+
         <button class="btn btn-lg btn-primary btn-block" type="submit"><i class="fa fa-plus"></i> Submit</button>
+
     </form>
 </div>
