Add skeleton of submit fn for registration form

--- a/public/app/register/register.html
+++ b/public/app/register/register.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form name="registrationForm" class="form-register" novalidate>
+    <form ng-submit="vm.submit()"name="registrationForm" class="form-register" novalidate>
         <h1 class="form-register-heading text-muted">Register</h1>
 
         <input type="text" name="username"
