Remove unused style class

--- a/public/app/register/register.html
+++ b/public/app/register/register.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form ng-submit="vm.submit(vm.user)"name="registrationForm" class="form-register" novalidate>
-        <h1 class="form-register-heading text-muted">Register</h1>
+        <h1 class="text-muted">Register</h1>
 
         <input type="text" name="username"
                class="form-control" placeholder="Username" ng-model="vm.user.username"
