--- a/public/app/coffee/coffee.html
+++ b/public/app/coffee/coffee.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Coffee</h1>
     <div ng-repeat="coffee in vm.coffee">
-        <div class="well col-sm-4">{{ coffee }}</div>
+        <div class="well col-sm-4">{{ coffee.name }}</div>
     </div>
 </div>
