Change text and icon on login btn

--- a/public/app/login.html
+++ b/public/app/login.html
@@ -20,7 +20,7 @@
             <div ng-messages-include="app/register/messages.html"></div>
         </div>
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit"><i class="fa fa-plus"></i> Submit</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit"><i class="fa fa-sign-in"></i> Login</button>
 
     </form>
 </div>
