--- a/public/app/login.html
+++ b/public/app/login.html
@@ -21,6 +21,7 @@
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit"><i class="fa fa-sign-in"></i> Login</button>
+        <button ng-click="vm.googleLogin()" class="btn btn-lg btn-default btn-block" type="button"><i class="fa fa-google"></i> Google</button>
 
     </form>
 </div>
