Add link to register account

--- a/public/app/login.html
+++ b/public/app/login.html
@@ -23,5 +23,7 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit"><i class="fa fa-sign-in"></i> Login</button>
         <button ng-click="vm.googleLogin()" class="btn btn-lg btn-default btn-block" type="button"><i class="fa fa-google"></i> Google</button>
 
+        <a href="/register">Don't have an account?</a>
+
     </form>
 </div>
