--- a/public/app/register/register.html
+++ b/public/app/register/register.html
@@ -30,6 +30,7 @@
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit"><i class="fa fa-plus"></i> Submit</button>
+        <a href="/login">Already have an account?</a>
 
     </form>
 </div>
