--- a/public/app/login.html
+++ b/public/app/login.html
@@ -21,6 +21,7 @@
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit"><i class="fa fa-sign-in"></i> Login</button>
+        <p class="text-muted text-center top-margin">Or login with any of the below services</p>
         <button ng-click="vm.authenticate('google')" class="btn btn-lg btn-default btn-block" type="button"><i class="fa fa-google"></i> Google</button>
         <button ng-click="vm.authenticate('facebook')" class="btn btn-lg btn-info btn-block" type="button"><i class="fa fa-facebook"></i> Facebook</button>
 
