--- a/public/app/coffee/addCoffee.html
+++ b/public/app/coffee/addCoffee.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form ng-submit="vm.addCoffee(vm.newCoffee)" name="addCoffeeForm" class="form-login" novalidate>
+    <form ng-submit="vm.addCoffee(vm.newCoffee)" name="addCoffeeForm" class="form-addCoffee" novalidate>
         <h1 class="text-muted">Add Coffee to the Mess</h1>
 
         <input type="text" name="coffeeName"
