--- a/public/app/coffee/coffee.html
+++ b/public/app/coffee/coffee.html
@@ -1,6 +1,13 @@
 <div class="container">
     <h1>Coffee</h1>
-    <div ng-repeat="coffee in vm.coffee">
-        <div class="well col-sm-4">{{ coffee.name }}</div>
+    <div class="row">
+        <div ng-repeat="coffee in vm.coffee">
+            <div class="well col-sm-4">
+                <p>{{coffee.name}}</p>
+                <p>{{coffee.type}}</p>
+                <p>{{coffee.weightWholeBean}}</p>
+                <p>{{coffee.weightGround}}</p>
+            </div>
+        </div>
     </div>
 </div>
