--- a/public/app/coffee/coffee.html
+++ b/public/app/coffee/coffee.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Coffee</h1>
-        <div ng-repeat="coffee in vm.coffee">
+        <div ng-repeat="coffee in vm.coffees">
             <div class="col-sm-4">
                 <p>Name: {{coffee.name}}</p>
                 <p>Type: {{coffee.type}}</p>
