Wire up front-end and back-end to get single coffee

--- a/public/app/coffee/coffeeDetails.html
+++ b/public/app/coffee/coffeeDetails.html
@@ -1,8 +1,8 @@
 
 <div class="container">
     <h1>Coffee Details</h1>
-    <p>Name: {{coffee.name}}</p>
-    <p>Type: {{coffee.type}}</p>
-    <p>Whole Beans (oz): {{coffee.weightWholeBean}}</p>
-    <p>Grounds (oz): {{coffee.weightGround}}</p>
+    <p>Name: {{vm.coffee.name}}</p>
+    <p>Type: {{vm.coffee.type}}</p>
+    <p>Whole Beans (oz): {{vm.coffee.weightWholeBean}}</p>
+    <p>Grounds (oz): {{vm.coffee.weightGround}}</p>
 </div>
