Add coffee inventory button

--- a/public/app/main.html
+++ b/public/app/main.html
@@ -5,4 +5,10 @@
         <p class="lead text-center">Always take time to stop and smell the coffee...</p>
     </div>
 
+    <div class="row">
+        <div class="well">
+            <a href="/coffee" class="btn btn-primary">Coffee Inventory</a>
+        </div>
+    </div>
+
 </div>
