--- a/public/app/coffee/coffeeDetails.html
+++ b/public/app/coffee/coffeeDetails.html
@@ -5,4 +5,13 @@
     <p>Type: {{vm.coffee.type}}</p>
     <p>Whole Beans (oz): {{vm.coffee.weightWholeBean}}</p>
     <p>Grounds (oz): {{vm.coffee.weightGround}}</p>
+
+<div class="row">
+   <div class="col-md-4">
+    <input type="number" name="grindAmount"
+           class="form-control" placeholder="Amount of beans to grind" ng-model="vm.grindAmount"
+           required autofocus>
+    <button class="btn btn-lg btn-primary" type="submit"></i> Grind</button>
+   </div>
+</div>
 </div>
