Implement skeleton controller fn to grind coffee

--- a/public/app/coffee/coffeeDetails.html
+++ b/public/app/coffee/coffeeDetails.html
@@ -11,7 +11,7 @@
     <input type="number" name="grindAmount"
            class="form-control" placeholder="Amount of beans to grind" ng-model="vm.grindAmount"
            required autofocus>
-    <button class="btn btn-lg btn-primary" type="submit"></i> Grind</button>
+    <button class="btn btn-lg btn-primary" ng-click="vm.grind()"></i> Grind</button>
    </div>
 </div>
 </div>
