--- a/public/app/coffee/coffee.html
+++ b/public/app/coffee/coffee.html
@@ -3,11 +3,20 @@
     <div class="row">
         <div ng-repeat="coffee in vm.coffees">
             <div class="col-sm-4">
-                <h3><a ng-href="/coffee/{{coffee._id}}">{{coffee.name}}</a></h3>
-                <p>{{coffee.type}}</p>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            <a ng-href="/coffee/{{coffee._id}}">{{coffee.name}}</a>
+                        </h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>{{coffee.type}}</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
     <div class="row">
         <a href="/addCoffee" class="btn btn-primary"><i class="fa fa-plus"></i> Add Coffee</a>
     </div>
